# kriten-netbox-plugin

./: BUILD.md  INSTALL.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: publish-pypi.yml
kriten_netbox/: __init__.py  filtersets.py  forms.py  models.py  navigation.py  services.py  tables.py  urls.py  views.py
kriten_netbox.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
kriten_netbox/api/: serializers.py  urls.py  views.py
kriten_netbox/migrations/: 0001_initial.py
kriten_netbox/templates/kriten_netbox/: delete_form.html  kritencluster.html  kritenjob.html  kritenjobform.html  kritenrunner.html  kritentask.html  object_delete.html
