[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools",
  "wheel",
]

[project]
name = "kriten-netbox"
version = "0.1.0"
description = "Configure Kriten and run jobs from NetBox."
readme = "README.md"
keywords = [
  "netbox",
  "netbox-plugin",
  "automation",
  "network",
  "network-automation",
  "kubernetes",
]
requires-python = ">=3.10"
classifiers = [
  "Framework :: Django",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
license = { file = "LICENSE" }
authors = [
  {email = "steve@kubecode.io"},
  {name = "Steve Corp"}
]

[project.urls]
repository = "https://github.com/kriten-io/kriten-netbox-plugin/"
homepage = "https://kriten.io/"
documentation = "https://kriten.io/"

